Prepare for packaging and uploading to PPA.

--- a/src/debian/changelog
+++ b/src/debian/changelog
@@ -1,5 +1,5 @@
-oneway (0.1-1) unstable; urgency=low
+oneway (0.1-1) wily; urgency=low
 
   * Initial Release.
 
- -- Connor Brinton <connor.brinton+OW@gmail.com>  Wed, 23 Mar 2016 14:27:44 -0400
+ -- Connor Brinton <connor.brinton+LP@gmail.com>  Wed, 23 Mar 2016 14:27:44 -0400
