--- a/src/debian/changelog
+++ b/src/debian/changelog
@@ -1,3 +1,9 @@
+oneway (0.2-0) trusty; urgency=low
+
+  * Uploading to PPA.
+
+ -- Connor Brinton <connor.brinton+LP@gmail.com>  Sat, 26 Mar 2016 17:40:57 -0400
+
 oneway (0.1-1) trusty; urgency=low
 
   * Initial Release.
